packages/react-components/src/components/Checkbox/Checkbox.module.scss
.checkbox {
  display: inline-block;

  &__label {
    display: inline-flex;
    flex: 0 1 auto;
    align-items: center;
    cursor: pointer;
    width: 100%;
  }

  &__text {
    flex: 1 0 auto;
    margin-left: 8px;
    color: var(--content-basic-primary);
  }

  &__input {
    appearance: none;
    box-sizing: border-box;
    display: flex;
    position: relative;
    align-items: center;
    justify-content: center;
    transition: all 0.2s ease;
    border: 1px solid var(--border-basic-primary);
    border-radius: 4px;
    background-color: var(--surface-primary-default);
    width: 16px;
    height: 16px;

    &::after {
      content: '';
      display: inline-block;
      position: absolute;
      transition: opacity 0.2 ease;
      opacity: 0;
      z-index: 1;
      background-color: var(--content-invert-primary);
      width: 24px;
      height: 24px;
      -webkit-mask: url('./check.svg') no-repeat 50% 50%;
      mask: url('./check.svg') no-repeat 50% 50%;
      mask-size: cover;
    }

    &:checked::after {
      opacity: 1;
    }

    &:checked {
      border-color: var(--color-action-default);
      background-color: var(--color-action-default);

      .checkbox__checkmark {
        opacity: 1;
      }
    }

    &:focus {
      box-shadow: 0 0 1px 2px rgb(66 132 245 / 70%); // TODO use shadow token
    }
  }

  &--selected {
    &:hover {
      .checkbox__input:checked + .checkbox__square {
        border-color: var(--action-primary-hover);
        background-color: var(--action-primary-hover);
      }
    }

    .checkbox__square {
      border-color: var(--action-primary-default);
      background-color: var(--action-primary-default);
    }
  }

  &--disabled {
    .checkbox {
      &__input {
        opacity: 0.4;
        border-color: var(--border-disabled);
        background-color: var(--surface-basic-disabled);
      }

      &__label,
      &__input,
      &__helper,
      &__text {
        cursor: not-allowed;
        color: var(--content-disabled);
      }
    }
  }

  &__helper {
    margin-left: 32px;
    cursor: default;
  }
}

